--- a/Bits32/ComUSB/Debug/makefile
+++ b/Bits32/ComUSB/Debug/makefile
@@ -70,8 +70,8 @@ all: main-build
 main-build: ComUSBTEST.elf secondary-outputs
 
 # Tool invocations
-ComUSBTEST.elf ComUSBTEST.map: $(OBJS) $(USER_OBJS) C:\Users\Baccon\Documents\MicrosCodes\Bits32\ComUSB\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ComUSBTEST.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Baccon\Documents\MicrosCodes\Bits32\ComUSB\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ComUSBTEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+ComUSBTEST.elf ComUSBTEST.map: $(OBJS) $(USER_OBJS) C:\Users\santi\OneDrive\Documentos\Micros\Micros2025\Bits32\ComUSB\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "ComUSBTEST.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\santi\OneDrive\Documentos\Micros\Micros2025\Bits32\ComUSB\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ComUSBTEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
